fix bug and implement new feature: like, comment

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>8.5.14</version>
         </dependency>
 
+<!--        CAPTURE FRAME-->
+        <dependency>
+            <groupId>org.jcodec</groupId>
+            <artifactId>jcodec</artifactId>
+            <version>0.2.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>Assignment</finalName>
